Banker new value

--- a/Banker.html
+++ b/Banker.html
@@ -193,26 +193,20 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
-                  <h4>Client: Ahmed Sherif</h4></a>
-                  <p>Client ID:#03<br>Type = Premium.</p>
+                  <h4>Client: Youssef Khawaga</h4></a>
+                  <p>Client ID:#04<br>Type = Mastercard</p>
                 </div>
               </div>
             </div>
             </div>
             <div class="col-lg-6">
               <div class="meeting-item">
-                <div class="thumb">
-                  <div class="price">
-                    <span>$14.00</span>
-                  </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt="Higher Education"></a>
-                </div>
-                <div class="down-content">
+                <div class="down-content"><h4>Request: 1</h4>
                   <div class="date">
-                    <h6>Nov <span>26</span></h6>
+                    <h6>Nov <span>10</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Higher Education Conference</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <h4>Client: Youssef Khawaga</h4></a>
+                  <p>Client ID:#04<br>Type = Mastercard</p>
                 </div>
               </div>
             </div>
