--- a/Client.html
+++ b/Client.html
@@ -161,7 +161,7 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h2>Upcoming Meetings</h2>
+            <h2>REMINDERS</h2>
           </div>
         </div>
         <div class="col-lg-4">
@@ -193,8 +193,8 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>New Lecturers Meeting</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="meeting-details.html"><h4>CREDIT CARD BILL</h4></a>
+                  <p>DUE JUNE.</p>
                 </div>
               </div>
             </div>
@@ -210,8 +210,8 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="date">
                     <h6>Nov <span>24</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Online Teaching Techniques</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="meeting-details.html"><h4>LOAN BILL</h4></a>
+                  <p>DUE MAY.</p>
                 </div>
               </div>
             </div>
@@ -227,8 +227,8 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="date">
                     <h6>Nov <span>26</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Higher Education Conference</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="meeting-details.html"><h4>GAS BILL</h4></a>
+                  <p>DUE MAY</p>
                 </div>
               </div>
             </div>
@@ -244,8 +244,8 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="date">
                     <h6>Nov <span>30</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Student Training Meetup</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="meeting-details.html"><h4>LOAN BILL</h4></a>
+                  <p>DUE MAY.</p>
                 </div>
               </div>
             </div>
