new banker value 2

--- a/Banker.html
+++ b/Banker.html
@@ -178,7 +178,7 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="row">
             <div class="col-lg-6">
               <div class="meeting-item">
-                <div class="down-content"><h4>Request: 1</h4>
+                <div class="down-content"><h4>Request: Credit Card Application (1)</h4>
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
@@ -189,7 +189,7 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
             <div class="col-lg-6">
               <div class="meeting-item">
-                <div class="down-content"><h4>Request: 1</h4>
+                <div class="down-content"><h4>Request: Credit Card Application (2)</h4>
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
@@ -201,32 +201,39 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
             <div class="col-lg-6">
               <div class="meeting-item">
-                <div class="down-content"><h4>Request: 1</h4>
+                <div class="down-content"><h4>Request: Loan Application(1)</h4>
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
-                  <h4>Client: Youssef Khawaga</h4></a>
-                  <p>Client ID:#04<br>Type = Mastercard</p>
+                  <h4>Client: Maya Saad</h4></a>
+                  <p>Client ID:#05<br>Type = Visa</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+            <div class="col-lg-6">
+              <div class="meeting-item">
+                <div class="down-content"><h4>Request: Credit Card Issues (1)</h4>
+                  <div class="date">
+                    <h6>Nov <span>10</span></h6>
+                  </div>
+                  <h4>Client: Ahmed Hassaballah</h4></a>
+                  <p>Client ID:#06<br> Card ID: 19927 <br> Type = Mastercard</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="meeting-item">
-                <div class="thumb">
-                  <div class="price">
-                    <span>$48.00</span>
-                  </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-04.jpg" alt="Student Training"></a>
-                </div>
-                <div class="down-content">
+                <div class="down-content"><h4>Request: Credit Card Issues (2)</h4>
                   <div class="date">
-                    <h6>Nov <span>30</span></h6>
+                    <h6>Nov <span>10</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Student Training Meetup</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <h4>Client: Kirollos</h4></a>
+                  <p>Client ID:#07<br> Card ID: 20984 <br> Type = Visa.</p>
                 </div>
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
