--- a/BankerInfo.html
+++ b/BankerInfo.html
@@ -54,12 +54,12 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Logo End ***** -->
                       <ul class="nav">
                         <li class="scroll-to-section">
+                          <li><a href="Home.html">Home</a></li>
                           <li class="active"><a href="#log-in"> Login </a></li>
-                          <li><a href="Client.html">Client</a></li>
                           <li><a href="#register">Register</a></li>
-                          <li><a href="Bills.html">Services</a></li>
                           <li><a href="#contact">Contact Us</a></li> 
                         </li>
+                        
                     </ul>
                       <!-- ***** Menu Start ***** -->   
                       <a class='menu-trigger'>
@@ -114,9 +114,9 @@ https://templatemo.com/tm-569-edu-meeting
                     <li><a href="Admin.html">Login As Admin</a></li>
                   </div>
                 -->
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="button1">LOGIN</button><a href="Banker.html"></a>
-                  </fieldset>
+                <div class="main-button-red">
+                  <a href="Banker.html">Login Now</a>
+                </div>
  
               </div>
             </form>
