--- a/Home.html
+++ b/Home.html
@@ -55,10 +55,12 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a>
-                            <li><a href="Info.html">info</a></li>
-                            <li><a href="#apply">Apply Now</a></li>
-                            <li><a href="#upcoming-meetings">Requests</a></li>
-                            <li><a href="#contact">Report Client</a></li> 
+                            <li class="has-sub">LOGIN/REGISTER
+                              <li><a href="ClientInfo.html">Client</a></li>
+                              <li><a href="BankerInfo.html">Banker</a></li>
+                              <li><a href="AdminInfo.html">Admin</a></li>
+                            <li><a href="#upcoming-meetings">Services</a></li>
+                            <li><a href="#contact">Contact Us</a></li> 
                           </li>
                       </ul>        
                       <a class='menu-trigger'>
