--- a/Banker.html
+++ b/Banker.html
@@ -183,7 +183,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Nov <span>10</span></h6>
                   </div>
                   <h4>Client: Ahmed Sherif</h4></a>
-                  <p>Client ID:#03<br>Type = Premium.</p>
+                  <p>Client ID:#03<br>Type = Premium. <br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
                 </div>
               </div>
             </div>
@@ -194,7 +194,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Nov <span>10</span></h6>
                   </div>
                   <h4>Client: Youssef Khawaga</h4></a>
-                  <p>Client ID:#04<br>Type = Mastercard</p>
+                  <p>Client ID:#04<br>Type = Mastercard<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
                 </div>
               </div>
             </div>
@@ -206,7 +206,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Nov <span>10</span></h6>
                   </div>
                   <h4>Client: Maya Saad</h4></a>
-                  <p>Client ID:#05<br>Type = Visa</p>
+                  <p>Client ID:#05<br>Type = Visa<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
                 </div>
               </div>
             </div>
@@ -218,7 +218,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Nov <span>10</span></h6>
                   </div>
                   <h4>Client: Ahmed Hassaballah</h4></a>
-                  <p>Client ID:#06<br> Card ID: 19927 <br> Type = Mastercard</p>
+                  <p>Client ID:#06<br> Card ID: 19927 <br> Type = Mastercard<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
                 </div>
               </div>
             </div>
@@ -229,7 +229,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Nov <span>10</span></h6>
                   </div>
                   <h4>Client: Kirollos</h4></a>
-                  <p>Client ID:#07<br> Card ID: 20984 <br> Type = Visa.</p>
+                  <p>Client ID:#07<br> Card ID: 20984 <br> Type = Visa<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
                 </div>
               </div>
             </div>
