--- a/Bills.html
+++ b/Bills.html
@@ -118,6 +118,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Electricity Bill #8</h4>
                       <p>Bill for June.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -135,6 +138,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Credit Card Bill #4</h4>
                       <p>Bill for May.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -152,6 +158,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Loan Bill #80</h4>
                       <p>Bill for June.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -169,6 +178,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Credit Card Bill #6</h4>
                       <p>Bill for August.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -186,6 +198,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Gas Bill #78</h4>
                       <p>Bill for August.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -203,6 +218,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Electricity Bill #23</h4>
                       <p>Bill for July.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -220,6 +238,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Electricity Bill #34</h4>
                       <p>Bill for June.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -237,6 +258,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Water Bill #4</h4>
                       <p>Bill for June.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -254,6 +278,9 @@ https://templatemo.com/tm-569-edu-meeting
                       </div>
                       <h4>Telephone Bill #8</h4>
                       <p>Bill for June.</p>
+                      <div class="main-button-red">
+                        <div><a href="Payments.html">Pay</a></div>
+                    </div>
                     </div>
                   </div>
                 </div>
