--- a/Payments.html
+++ b/Payments.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-569-edu-meeting
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <section class="heading-page3 header-text" id="top">
+  <section class="heading-page2 header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -103,37 +103,42 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="TYPE..." required="">
+                    <input name="email" type="text" id="email" placeholder="TYPE...*" required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="ID..." required="">
+                      <input name="subject" type="text" id="subject" placeholder="ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="BANK ID*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="ACCOUNT ID*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="DESTINATION BANK ID...*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="DESTINATION ACCOUNT ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="POSTAL CODE (optional)...*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="DESTINATION BANK ID (optional)...*" required="">
                     </fieldset>
                   </div>
-                  div class="col-lg-4">
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="POSTAL CODE (optional)..." required="">
+                    </fieldset>
+                  </div>
+                    <div class="col-lg-4">
                     <fieldset>
                       <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="button">PAY</button>
+                      <button type="submit" id="form-submit" class="button">PAY WITH BANK ACCOUNT</button>
                     </fieldset>
                   </div>
                 </div>
@@ -151,12 +156,12 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL..." required="">
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL...*" required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="CARD ID..." required="">
+                      <input name="subject" type="text" id="subject" placeholder="CARD ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
@@ -164,47 +169,19 @@ https://templatemo.com/tm-569-edu-meeting
                       <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
                     </fieldset>
                   </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="button">PAY</button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
-              <br>
-              <form id="contact" action="" method="post">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <h2>Pay for service bill</h2>
-                  </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="name" type="text" id="name" placeholder="NAME...*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="BILL ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL..." required="">
-                  </fieldset>
-                  </div>
-                  <div class="col-lg-4">
-                    <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="ID..." required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-4">
-                    <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="TYPE...*" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-4">
-                    <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="BANK ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="button">PAY</button>
+                      <button type="submit" id="form-submit" class="button">PAY WITH BANK ACCOUNT</button>
                     </fieldset>
                   </div>
                 </div>
@@ -222,12 +199,12 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL..." required="">
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL...*" required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="LOAN ID..." required="">
+                      <input name="subject" type="text" id="subject" placeholder="BILL ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
@@ -235,9 +212,74 @@ https://templatemo.com/tm-569-edu-meeting
                       <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
                     </fieldset>
                   </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="BANK ID..." required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="CREDIT CARD ID..." required="">
+                    </fieldset>
+                  </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="button">PAY</button>
+                      <button type="submit" id="form-submit" class="button">PAY WITH BANK ACCOUNT</button>
+                    </fieldset>
+                  </div>
+                  <br>
+                  <br>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">PAY WITH CREDIT CARD</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+              <br>
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h2>Pay for service bill</h2>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="name" type="text" id="name" placeholder="NAME...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL...*" required="">
+                  </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="ID...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="TYPE...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="BANK ID...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="BILL ID...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">PAY WITH BANK ACCOUNT</button>
                     </fieldset>
                   </div>
                 </div>
@@ -255,12 +297,12 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL..." required="">
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL...*" required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="ID..." required="">
+                      <input name="subject" type="text" id="subject" placeholder="ID...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
@@ -273,9 +315,26 @@ https://templatemo.com/tm-569-edu-meeting
                       <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
                     </fieldset>
                   </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="BANK ID..." required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="CREDIT CARD ID..." required="">
+                    </fieldset>
+                  </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="button">PAY</button>
+                      <button type="submit" id="form-submit" class="button">PAY WITH BANK ACCOUNT</button>
+                    </fieldset>
+                  </div>
+                  <br>
+                  <br>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">PAY WITH CREDIT CARD</button>
                     </fieldset>
                   </div>
                 </div>
