--- a/reminder.html
+++ b/reminder.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-569-edu-meeting
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <section class="heading-page3 header-text" id="top">
+  <section class="heading-page4 header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -94,16 +94,16 @@ https://templatemo.com/tm-569-edu-meeting
               <form id="contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Fill the form below</h2>
+                    <h2>Set your reminder here</h2>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="name" type="text" id="name" placeholder="BILL TYPE...*" required="">
+                      <input name="name" type="text" id="name" placeholder="SERVICE BILL TYPE...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="BILL ID..." required="">
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="SERVICE BILL ID..." required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
