--- a/Payments.html
+++ b/Payments.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" placeholder="TYPE...*" required="">
+                    <input name="email" type="text" id="email" placeholder="TYPE (internal / domestic / abroad)...*" required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
@@ -209,6 +209,11 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="TYPE (personal / car)...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
                       <input name="subject" type="text" id="subject" placeholder="AMOUNT...*" required="">
                     </fieldset>
                   </div>
@@ -259,7 +264,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="TYPE...*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="TYPE (gas / electricity /...)...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
