--- a/loanapply.html
+++ b/loanapply.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="TYPE...*" required="">
+                      <input name="subject" type="text" id="subject" placeholder="TYPE (Personal / Car)...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
