--- a/reminder.html
+++ b/reminder.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="name" type="text" id="name" placeholder="SERVICE BILL TYPE...*" required="">
+                      <input name="name" type="text" id="name" placeholder="SERVICE BILL TYPE (gas /...)...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
