--- a/Banker.html
+++ b/Banker.html
@@ -55,9 +55,9 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a>
-                            <li><a href="#upcoming-meetings">Requests</a></li>
-                            <li><a href="#upcoming-meetings">Client Issues</a></li>
+                            <li><a href="#upcoming-meetings">Requests AND Issues</a></li>
                             <li><a href="#contact">Report Admin</a></li> 
+                            <li><a href="#reply-to">Reply</a></li> 
                             <li><a href="Notifications.html">Notifications</a></li>
                           </li>
                       </ul>        
@@ -180,7 +180,7 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="meeting-item">
                 <div class="down-content"><h4>Request: Credit Card Application (1)</h4>
                   <div class="date">
-                    <h6>Nov <span>10</span></h6>
+                    <h6>Aug <span>25</span></h6>
                   </div>
                   <h4>Client: Ahmed Sherif</h4></a>
                   <p>Client ID:#03<br>Type = Premium. <br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
@@ -191,7 +191,7 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="meeting-item">
                 <div class="down-content"><h4>Request: Credit Card Application (2)</h4>
                   <div class="date">
-                    <h6>Nov <span>10</span></h6>
+                    <h6>Sep <span>12</span></h6>
                   </div>
                   <h4>Client: Youssef Khawaga</h4></a>
                   <p>Client ID:#04<br>Type = Mastercard<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
@@ -206,7 +206,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Nov <span>10</span></h6>
                   </div>
                   <h4>Client: Maya Saad</h4></a>
-                  <p>Client ID:#05<br>Type = Visa<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
+                  <p>Client ID:#05<br>Type = Visa<br> <button class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
                 </div>
               </div>
             </div>
@@ -215,10 +215,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="meeting-item">
                 <div class="down-content"><h4>Request: Credit Card Issues (1)</h4>
                   <div class="date">
-                    <h6>Nov <span>10</span></h6>
+                    <h6>DEC <span>5</span></h6>
                   </div>
                   <h4>Client: Ahmed Hassaballah</h4></a>
-                  <p>Client ID:#06<br> Card ID: 19927 <br> Type = Mastercard<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
+                  <p>Client ID:#06<br> Card ID: 19927 <br> Type = Mastercard<br><div class="main-button-red"><a href="#reply-to">Reply</a></div> </p>
                 </div>
               </div>
             </div>
@@ -226,10 +226,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="meeting-item">
                 <div class="down-content"><h4>Request: Credit Card Issues (2)</h4>
                   <div class="date">
-                    <h6>Nov <span>10</span></h6>
+                    <h6>Feb <span>20</span></h6>
                   </div>
                   <h4>Client: Kirollos</h4></a>
-                  <p>Client ID:#07<br> Card ID: 20984 <br> Type = Visa<br> <button type="submit" id="form-submit" class="button">Accept</button> <button type="submit" id="form-submit" class="button">Reject</button></p>
+                  <p>Client ID:#07<br> Card ID: 20984 <br> Type = Visa<br> <div class="main-button-red"><a href="#reply-to">Reply</a></div> </p>
                 </div>
               </div>
             </div>
@@ -240,260 +240,6 @@ https://templatemo.com/tm-569-edu-meeting
     </div>
   </section>
 
-  <section class="our-courses" id="courses">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section-heading">
-            <h2>Our Popular Courses</h2>
-          </div>
-        </div>
-        <div class="col-lg-12">
-          <div class="owl-courses-item owl-carousel">
-            <div class="item">
-              <img src="assets/images/course-02.jpg" alt="Course Two">
-              <div class="down-content">
-                <h4>Curabitur molestie dignissim purus vel</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$180</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
-              <div class="down-content">
-                <h4>Nulla at ipsum a mauris egestas tempor</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$140</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
-              <div class="down-content">
-                <h4>Aenean molestie quis libero gravida</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$120</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-01.jpg" alt="">
-              <div class="down-content">
-                <h4>Lorem ipsum dolor sit amet adipiscing elit</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$250</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-02.jpg" alt="">
-              <div class="down-content">
-                <h4>TemplateMo is the best website for Free CSS</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$270</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
-              <div class="down-content">
-                <h4>Web Design Templates at your finger tips</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$340</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
-              <div class="down-content">
-                <h4>Please visit our website again</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$360</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-01.jpg" alt="">
-              <div class="down-content">
-                <h4>Responsive HTML Templates for you</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$400</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-02.jpg" alt="">
-              <div class="down-content">
-                <h4>Download Free CSS Layouts for your business</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$430</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
-              <div class="down-content">
-                <h4>Morbi in libero blandit lectus cursus</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$480</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
-              <div class="down-content">
-                <h4>Curabitur molestie dignissim purus</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$560</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section class="our-facts">
     <div class="container">
@@ -501,20 +247,20 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              <h2>A Few Facts About Our University</h2>
+              <h2>A Few Facts About Our Bank</h2>
             </div>
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-12">
                   <div class="count-area-content percentage">
                     <div class="count-digit">94</div>
-                    <div class="count-title">Succesed Students</div>
+                    <div class="count-title">Loyal Clients</div>
                   </div>
                 </div>
                 <div class="col-12">
                   <div class="count-area-content">
-                    <div class="count-digit">126</div>
-                    <div class="count-title">Current Teachers</div>
+                    <div class="count-digit">300058</div>
+                    <div class="count-title">Current Clients</div>
                   </div>
                 </div>
               </div>
@@ -523,8 +269,8 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="row">
                 <div class="col-12">
                   <div class="count-area-content new-students">
-                    <div class="count-digit">2345</div>
-                    <div class="count-title">New Students</div>
+                    <div class="count-digit">5050</div>
+                    <div class="count-title">Current Employees</div>
                   </div>
                 </div> 
                 <div class="col-12">
@@ -537,11 +283,6 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
           </div>
         </div> 
-        <div class="col-lg-6 align-self-center">
-          <div class="video">
-            <a href="https://www.youtube.com/watch?v=HndV87XpkWg" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -555,11 +296,11 @@ https://templatemo.com/tm-569-edu-meeting
               <form id="contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Report Client</h2>
+                    <h2>Report Admin</h2>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="name" type="text" id="name" placeholder="FULL Name.." required="">
+                      <input name="name" type="text" id="name" placeholder="ADMIN ID.." required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
@@ -580,6 +321,50 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="col-lg-12">
                     <fieldset>
                       <button type="submit" id="form-submit" class="button">SEND REPORT NOW</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+ <section class="reply" id="reply-to">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 align-self-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <form id="reply-to" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h2>Reply to Client</h2>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="name" type="text" id="name" placeholder="CLIENT ID.." required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL.." required="">
+                  </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="SUBJECT.." required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="MESSAGE.." required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">SEND MESSAGE NOW</button>
                     </fieldset>
                   </div>
                 </div>
