--- a/Admin.html
+++ b/Admin.html
@@ -56,11 +56,8 @@ https://templatemo.com/tm-569-edu-meeting
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li><a href="Services.html">Services</a></li>
-                          <li class="scroll-to-section"><a href="#apply">Apply Now</a></li>
-                          <li class="has-sub">
-                              <a href="meetings.html">System Call Check</a>
-                              <li><a href="Review.html">Admin Scan</a></li>
-
+                          <li><a href="Review.html">Admin Scan</a></li>
+                          <li><a href="Notifications.html">Notifications</a></li>
                           <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
@@ -253,90 +250,6 @@ https://templatemo.com/tm-569-edu-meeting
     </div>
   </section>
 
-  <section class="apply-now" id="apply">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="item">
-                <h3>Register as an Admin</h3>
-                <p>Apply as a new Admin to our Top Bank Sytem to have Access to our World and Gain more Opportunities. In case of Error,Click on the Button Below.</p>
-                <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="#contact">Click Here!</a></div>
-              </div>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="item">
-                <h3>Login Admin</h3>
-                <p>Our Top Bank would like to Thank You for being Part of our Ecosystem. In case of Error,Click on the Button Below. </p>
-                <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a href="#contact">Click Here!</a></div>
-              </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="accordions is-first-expanded">
-            <article class="accordion">
-                <div class="accordion-head">
-                    <span>Head Assistance</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p></p>
-                    </div>
-                </div>
-            </article>
-            <article class="accordion">
-                <div class="accordion-head">
-                    <span>Post new Announcement</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p><br><br></p>
-                    </div>
-                </div>
-            </article>
-            <article class="accordion">
-                <div class="accordion-head">
-                    <span>Alert Notifications</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p><br><br></p>
-                    </div>
-                </div>
-            </article>
-            <article class="accordion last-accordion">
-                <div class="accordion-head">
-                    <span>Notify Users of System Calls</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p><br><br></p>
-                    </div>
-                </div>
-            </article>
-        </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section class="our-courses" id="courses">
     <div class="container">
