--- a/Admin.html
+++ b/Admin.html
@@ -58,7 +58,8 @@ https://templatemo.com/tm-569-edu-meeting
                           <li><a href="Services.html">Services</a></li>
                           <li><a href="Review.html">Admin Scan</a></li>
                           <li><a href="Notifications.html">Notifications</a></li>
-                          <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
+                          <li class="scroll-to-section"><a href="#contact">Contact Us</a></li>
+                          <li><a href="Home.html">Log Out</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
