--- a/Banker.html
+++ b/Banker.html
@@ -59,6 +59,7 @@ https://templatemo.com/tm-569-edu-meeting
                             <li><a href="#contact">Report Admin</a></li> 
                             <li><a href="#reply-to">Reply</a></li> 
                             <li><a href="Notifications.html">Notifications</a></li>
+                            <li><a href="Home.html">Log Out</a></li>
                           </li>
                       </ul>        
                       <a class='menu-trigger'>
