--- a/Client.html
+++ b/Client.html
@@ -57,11 +57,12 @@ https://templatemo.com/tm-569-edu-meeting
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li><a href="Bills.html">Due Bills</a></li>
-                          <li><a href="Payments.html">Make A Payment</a></li>
+                          <li><a href="Payments.html">Payments</a></li>
                           <li><a href="reminder.html">Set Reminder</a></li>
                           <li><a href="cardpoints.html">Card Points</a></li>
-                          <li><a href="Transaction.html">Previous Transactions</a></li>
+                          <li><a href="Transaction.html">Transactions</a></li>
                           <li class="scroll-to-section"><a href="#contact">Send Report</a></li> 
+                          <li><a href="Home.html">Log Out</a></li>
                           <li><a href="Notifications.html"><div class="notification">
                             <span class="notification-badge">4</span>
                             <i class="fas fa-bell"></i>
