--- a/Home.html
+++ b/Home.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ** Menu Start ** -->
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a>
-                            <li class="has-sub">LOGIN/REGISTER</li>
+                            <li class="has-sub">LOGIN</li>
                               <li><a href="ClientInfo.html">Client</a></li>
                               <li><a href="BankerInfo.html">Banker</a></li>
                               <li><a href="AdminInfo.html">Admin</a></li>
@@ -293,7 +293,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]@[^ @]" placeholder="EMAIL.." required="">
+                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL.." required="">
                   </fieldset>
                   </div>
                   <div class="col-lg-4">
